# launcher-Nyvexa

./: .env copy.example  .env.enc  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: setup-icons.cjs
src/: App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dll/: README.txt
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: admin.rs  app.rs  auth.rs  avatar.rs  discount.rs  game_fix.rs  hubcap.rs  mod.rs  steam_fetch.rs  steam_integration.rs  steam_link.rs  stfixer.rs  store.rs  wallet.rs
src-tauri/src/services/: crypto.rs  device.rs  env.rs  mod.rs  supabase.rs
supabase/: 01_profiles_table.sql  02_profiles_rls.sql  03_trigger_new_user.sql  04_profiles_role.sql  05_games_table.sql  06_user_games.sql  07_reviews.sql  08_profiles_balance.sql  09_profiles_extra_info.sql  10_giftcodes_table.sql  11_fix_user_management.sql  12_admin_profiles_policy.sql  13_giftcodes_game_support.sql  14_deposits_table.sql  15_games_extra_info.sql  16_app_versioning.sql  17_giftcodes_expiry.sql  18_profiles_ban_status.sql  19_games_drm_column.sql  20_games_purchase_count.sql  21_store_assets.sql  22_custom_otps.sql  23_ctv_role_giftcodes.sql  24_ctv_program.sql  25_ctv_commission_dashboard.sql  26_sale_codes_checkout.sql  27_ctv_levels_video_requests.sql  28_game_fix_links.sql  29_web_events.sql  30_trade_system.sql  31_profiles_presence.sql  32_profiles_playing_status.sql  33_profiles_updated_at.sql  34_review_comments_gifts.sql  35_profile_steam_links.sql  (+50 more)
(+85 files in other folders)
