[package]
name = "nyvexa-launcher"
version = "1.0.1"
description = "Nyvexa Launcher - Tauri"
authors = ["Nyvexa Team"]
edition = "2021"
default-run = "nyvexa-launcher"

[[bin]]
name = "steam_guardian"
path = "bin/steam_guardian.rs"

[lib]
name = "nyvexa_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "image-ico", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream", "blocking"], default-features = false }
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"
dotenvy = "0.15"
directories = "5"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
urlencoding = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
unrar = "0.5"
lettre = { version = "0.11", features = ["tokio1", "tokio1-rustls-tls", "builder", "smtp-transport"], default-features = false }
md5 = "0.7"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
flate2 = { version = "1", features = ["zlib-ng"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["fileapi", "winnt", "winuser", "windef", "minwindef"] }
